# CarbonPilot

./: .env  .gitignore  README.md  changelog.md  docker-compose.yml  next.config.js  next.config.ts  package-lock.json  package.json  regole_progetto.md  requirements.txt  roadmap_progetto.md  scan_structure_enhanced.py  setup-dev.ps1  structure_snapshot.md  tsconfig.json
backend/: .env  Dockerfile  alembic.ini  database.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 455e264c6e0c_add_valves_required_to_part_remove_num_.py  7b0f1937b967_add_lamination_time_to_parts_and_create_.py  99913743b1c6_add_nesting_models.py  add_nesting_results_table.py  ce4649da7371_add_autoclave_supported_cycles_table_.py
backend/api/: nesting.py
backend/api/api_v1/: api.py
backend/api/api_v1/endpoints/: autoclave.py  catalog_parts.py  cure_cycles.py  nesting.py  (+3 more)
backend/crud/: autoclaves.py  catalog_parts.py  parts.py  schedules.py
backend/db/: base.py  session.py
backend/models/: __init__.py  associations.py  autoclave.py  catalog_part.py  cure_cycle.py  nesting.py  part.py  schedule.py
backend/repositories/: autoclave.py  cure_cycle.py  part.py  schedule.py
backend/routers/: autoclaves.py  catalog_parts.py  nesting.py  parts.py  reports.py  schedules.py
backend/schemas/: autoclave.py  catalog_part.py  cure_cycle.py  nesting.py  part.py  report.py  schedule.py
backend/scripts/: __init__.py  seed.py  seed_data.py  seed_test_data.py
backend/services/: nesting.py  nesting_optimizer.py  pdf_report.py
backend/tools/: seed.py
(+66 files in other folders)
