[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Antonio Sasso <antoniosasso00@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
sqlalchemy = "^2.0"
pydantic = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
ortools = "^9.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
